[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychozoon"
version = "0.1.0"
description = "A Python package for ptychography processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hanna Ruth", email = "hruth@anl.gov"}
]
dependencies = [
    "numpy",
    "scipy",
    "PyYAML",
    "tqdm",
    "cupy",
    "chronos-profiler",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]
qt = ["PyQt5"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0"]

[project.scripts]
view-vspi = "ptychozoon.cli:view_vspi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']